# RS-momentum-EMA-trading-bot

./: .coverage  .gitignore  .pre-commit-config.yaml  =3.7  CLAUDE.md  README.md  backtest.py  backtest_results_20260405_182706.csv  backtrack_visual.py  enhanced_scanner.py  enhanced_trading_algo.py  pyproject.toml  quality_stocks.py  requirements.txt  rs_scores_cache.csv  sample_canslim_rs_score.py  scanner.py  skeleton.py  test.py  trading_algo.py  verify_fixes.py
config/: __init__.py  settings.py
core/: canslim.py  data_client.py  index_ticker_fetcher.py  indicators.py  momentum_analysis.py  pullback_entries.py  stock_screening.py  trend_analysis.py  trending.py  yahoo_finance_helper.py
core/canslim/: __init__.py  a_annual_earnings.py  c_current_earnings.py  core.py  i_institutional.py  l_leader_laggard.py  m_market_direction.py  n_new_products.py  s_supply_demand.py
scan_results/: canslim_scan_20260408_003511.csv
tests/: conftest.py  test_canslim_logic.py  test_data_client.py  test_fmp_resilience.py  test_i_institutional.py  test_m_market_direction.py  test_n_new_products.py  test_s_supply_demand.py  test_stock_screening.py
