[project]
name = "canslim-trading-bot"
version = "0.1.0"
requires-python = ">=3.11"

# ─── Ruff ────────────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["F", "E", "W", "B", "I", "D", "ANN"]
ignore = [
    "D100",    # Missing docstring in public module — enforced only on packages
    "D104",    # Missing docstring in public package — __init__.py files are intentionally minimal
    "D203",    # one-blank-line-before-class — conflicts with D211 (Google style)
    "D213",    # multi-line-summary-second-line — conflicts with D212 (Google style)
    "ANN401",  # Disallow Any — data_client.py session cache legitimately uses Any
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["core", "config", "quality_stocks", "enhanced_scanner"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "ANN"]          # No docstring/annotation requirements on test functions
"config/settings.py" = ["D"]            # Settings are self-documenting via comments
"verify_fixes.py" = ["D", "ANN"]        # Legacy file — will be deleted after test migration

# ─── Pytest ──────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that make real network calls (deselect with -m 'not integration')",
]
# Integration tests are skipped by default; run them with: pytest -m integration
addopts = "--cov=. --cov-report=term-missing -m 'not integration'"

# ─── Coverage ────────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["."]
omit = [
    "*/site-packages/*",
    "*/__pycache__/*",
    ".venv/*",
    "venv/*",
    "verify_fixes.py",
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
