[project]
name = "canslim-trading-bot"
version = "0.1.0"
requires-python = ">=3.11"

# ─── Ruff ────────────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["F", "E", "B", "I"]
ignore = [
    "E501",  # Line too long — handled by formatter, not enforced as an error
]

[tool.ruff.lint.isort]
known-first-party = ["core", "config", "quality_stocks", "enhanced_scanner"]

# ─── Pytest ──────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that make real network calls (deselect with -m 'not integration')",
]
# Integration tests are skipped by default; run them with: pytest -m integration
addopts = "--cov=. --cov-report=term-missing -m 'not integration'"

# ─── Coverage ────────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["."]
omit = [
    "*/site-packages/*",
    "*/__pycache__/*",
    ".venv/*",
    "venv/*",
    "verify_fixes.py",
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
